3.4.3/_sources/gallery/event_handling/close_event.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/event_handling/close_event.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_event_handling_close_event.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_event_handling_close_event.py:


===========
Close Event
===========

Example to show connecting events that occur when the figure closes.

.. GENERATED FROM PYTHON SOURCE LINES 8-19



.. image:: /gallery/event_handling/images/sphx_glr_close_event_001.png
    :alt: close event
    :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt


    def on_close(event):
        print('Closed Figure!')

    fig = plt.figure()
    fig.canvas.mpl_connect('close_event', on_close)

    plt.text(0.35, 0.5, 'Close Me!', dict(size=30))
    plt.show()


.. _sphx_glr_download_gallery_event_handling_close_event.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: close_event.py <close_event.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: close_event.ipynb <close_event.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
